| Summary: | ASTERISK-27398: No joint capabilities with video and audio-only streams | ||
| Reporter: | Benjamin Keith Ford (bford) | Labels: | pjsip |
| Date Opened: | 2017-11-06 15:36:34.000-0600 | Date Closed: | 2018-08-15 09:38:29 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_sdp_rtp |
| Versions: | 15.1.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Ubuntu-16.04 | Attachments: | ( 0) logs.tar.gz |
| Description: | Using Cyber Mega Phone to test, there are a few scenarios where using a mixture of audio-only and both audio and video will cause unexpected behavior. One example:
# User A joins with audio-only # User B joins with audio and video, but User A only sees 'Waiting For Video' from User B # User C joins with audio and video, and now User A can see video from User B and User C # User B leaves, and User A loses video from both User B and User C This was all done with Chromium and direct_media=no. Firefox seems to not have this issue, but has a couple other problems that made testing this difficult, such as not working with multiple tabs or same media sources, and can't see other Chromium users joining after already in the video conference. | ||
| Comments: | By: Benjamin Keith Ford (bford) 2017-11-06 15:37:52.341-0600 Attached logs from 3 different scenarios with PJSIP logging on By: Friendly Automation (friendly-automation) 2018-08-15 09:38:30.748-0500 Change 9834 merged by Jenkins2: res_pjsip/rtp: No joint capabilities between streams. [https://gerrit.asterisk.org/9834|https://gerrit.asterisk.org/9834] By: Friendly Automation (friendly-automation) 2018-08-15 09:39:41.670-0500 Change 9833 merged by Jenkins2: res_pjsip/rtp: No joint capabilities between streams. [https://gerrit.asterisk.org/9833|https://gerrit.asterisk.org/9833] By: Friendly Automation (friendly-automation) 2018-08-15 09:46:26.416-0500 Change 9832 merged by George Joseph: res_pjsip/rtp: No joint capabilities between streams. [https://gerrit.asterisk.org/9832|https://gerrit.asterisk.org/9832] | ||